@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2025 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.workers.temporal.scheduling;
@@ -11,12 +11,16 @@ import static io.airbyte.metrics.lib.ApmTraceConstants.WORKFLOW_TRACE_OPERATION_
 import com.fasterxml.jackson.databind.JsonNode;
 import datadog.trace.api.Trace;
 import io.airbyte.commons.constants.WorkerConstants;
+import io.airbyte.commons.temporal.TemporalJobType;
+import io.airbyte.commons.temporal.TemporalTaskQueueUtils;
 import io.airbyte.commons.temporal.TemporalWorkflowUtils;
 import io.airbyte.commons.temporal.annotations.TemporalActivityStub;
 import io.airbyte.commons.temporal.exception.RetryableException;
-import io.airbyte.commons.temporal.scheduling.CheckConnectionWorkflow;
+import io.airbyte.commons.temporal.scheduling.CheckCommandInput;
+import io.airbyte.commons.temporal.scheduling.CheckCommandInput.CheckConnectionInput;
 import io.airbyte.commons.temporal.scheduling.ConnectionManagerWorkflow;
 import io.airbyte.commons.temporal.scheduling.ConnectionUpdaterInput;
+import io.airbyte.commons.temporal.scheduling.ConnectorCommandWorkflow;
 import io.airbyte.commons.temporal.scheduling.SyncWorkflow;
 import io.airbyte.commons.temporal.scheduling.retries.RetryManager;
 import io.airbyte.commons.temporal.scheduling.state.WorkflowInternalState;
@@ -78,9 +82,6 @@ import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceAc
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.HydrateOutput;
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.PersistInput;
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.PersistOutput;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity.RouteToSyncTaskQueueInput;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity.RouteToSyncTaskQueueOutput;
 import io.airbyte.workers.temporal.scheduling.activities.StreamResetActivity;
 import io.airbyte.workers.temporal.scheduling.activities.StreamResetActivity.DeleteStreamResetRecordsForJobInput;
 import io.airbyte.workers.temporal.scheduling.activities.WorkflowConfigActivity;
@@ -92,6 +93,7 @@ import io.temporal.workflow.CancellationScope;
 import io.temporal.workflow.ChildWorkflowOptions;
 import io.temporal.workflow.Workflow;
 import jakarta.annotation.Nullable;
+import java.lang.invoke.MethodHandles;
 import java.time.Duration;
 import java.util.HashSet;
 import java.util.Map;
@@ -101,21 +103,23 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * ConnectionManagerWorkflowImpl.
  */
-@Slf4j
 @SuppressWarnings("PMD.AvoidDuplicateLiterals")
 public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow {
 
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
   private static final String GENERATE_CHECK_INPUT_TAG = "generate_check_input";
-  private static final String SYNC_TASK_QUEUE_ROUTE_RENAME_TAG = "sync_task_queue_route_rename";
   private static final int GENERATE_CHECK_INPUT_CURRENT_VERSION = 1;
-  private static final int SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION = 1;
   private static final String CHECK_WORKSPACE_TOMBSTONE_TAG = "check_workspace_tombstone";
   private static final int CHECK_WORKSPACE_TOMBSTONE_CURRENT_VERSION = 1;
+  private static final String PASS_DEST_REQS_TO_CHECK_TAG = "pass_dest_reqs_to_check";
+  private static final int PASS_DEST_REQS_TO_CHECK_CURRENT_VERSION = 1;
 
   private final WorkflowState workflowState = new WorkflowState(UUID.randomUUID(), new NoopStateListener());
 
@@ -138,8 +142,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   private RecordMetricActivity recordMetricActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
   private WorkflowConfigActivity workflowConfigActivity;
-  @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
-  private RouteToSyncTaskQueueActivity routeToSyncTaskQueueActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
   private FeatureFlagFetchActivity featureFlagFetchActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
@@ -240,7 +242,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   @SuppressWarnings("PMD.UnusedLocalVariable")
   private CancellationScope generateSyncWorkflowRunnable(final ConnectionUpdaterInput connectionUpdaterInput) {
     return Workflow.newCancellationScope(() -> {
-      if (connectionUpdaterInput.isSkipScheduling()) {
+      if (connectionUpdaterInput.getSkipScheduling()) {
         workflowState.setSkipScheduling(true);
       }
 
@@ -258,7 +260,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
       final Duration timeTilScheduledRun = getTimeTilScheduledRun(connectionUpdaterInput.getConnectionId());
 
       final Duration timeToWait;
-      if (connectionUpdaterInput.isFromFailure()) {
+      if (connectionUpdaterInput.getFromFailure()) {
         // note this can fail the job if the backoff is longer than scheduled time to wait
         timeToWait = resolveBackoff();
       } else {
@@ -340,7 +342,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
           // Allows us to classify unhandled failures from the sync workflow.
           workflowInternalState.getFailures().add(FailureHelper.failureReasonFromWorkflowAndActivity(
               childWorkflowFailure.getWorkflowType(),
-              af.getActivityType(),
               af.getCause(),
               workflowInternalState.getJobId(),
               workflowInternalState.getAttemptNumber()));
@@ -409,7 +410,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
     accumulateFailureAndPersist(madeProgress);
 
     final FailureType failureType =
-        standardSyncOutput != null ? standardSyncOutput.getFailures().isEmpty() ? null : standardSyncOutput.getFailures().get(0).getFailureType()
+        standardSyncOutput != null ? standardSyncOutput.getFailures().isEmpty() ? null : standardSyncOutput.getFailures().getFirst().getFailureType()
             : null;
     if (isWithinRetryLimit(attemptNumber) && failureType != FailureType.CONFIG_ERROR) {
       // restart from failure
@@ -477,7 +478,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
 
   private boolean isWithinRetryLimit(final int attemptNumber) {
     if (useAttemptCountRetries()) {
-      final int maxAttempt = configFetchActivity.getMaxAttempt().getMaxAttempt();
+      final int maxAttempt = configFetchActivity.getMaxAttempt().maxAttempt();
 
       return maxAttempt > attemptNumber;
     }
@@ -592,13 +593,21 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
       IntegrationLauncherConfig launcherConfig = checkInputs.getDestinationLauncherConfig()
           .withPriority(WorkloadPriority.DEFAULT);
       log.info("DESTINATION CHECK: Starting");
-      final ConnectorJobOutput destinationCheckResponse;
-      destinationCheckResponse = runCheckInChildWorkflow(jobRunConfig, launcherConfig,
+      final var checkDestInput =
           new StandardCheckConnectionInput()
               .withActorType(ActorType.DESTINATION)
               .withActorId(checkInputs.getDestinationCheckConnectionInput().getActorId())
               .withConnectionConfiguration(checkInputs.getDestinationCheckConnectionInput().getConnectionConfiguration())
-              .withActorContext(ContextConversionHelper.buildDestinationContextFrom(jobInputs, checkInputs)));
+              .withActorContext(ContextConversionHelper.buildDestinationContextFrom(jobInputs, checkInputs));
+
+      final boolean shouldPassReqs =
+          Workflow.getVersion(PASS_DEST_REQS_TO_CHECK_TAG, Workflow.DEFAULT_VERSION,
+              PASS_DEST_REQS_TO_CHECK_CURRENT_VERSION) >= PASS_DEST_REQS_TO_CHECK_CURRENT_VERSION;
+      if (shouldPassReqs) {
+        checkDestInput.setResourceRequirements(checkInputs.getDestinationCheckConnectionInput().getResourceRequirements());
+      }
+
+      final ConnectorJobOutput destinationCheckResponse = runCheckInChildWorkflow(jobRunConfig, launcherConfig, checkDestInput);
       if (SyncCheckConnectionResult.isOutputFailed(destinationCheckResponse)) {
         checkConnectionResult.setFailureOrigin(FailureReason.FailureOrigin.DESTINATION);
         checkConnectionResult.setFailureOutput(destinationCheckResponse);
@@ -696,7 +705,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
 
   @Override
   public JobInformation getJobInformation() {
-    final Long jobId = workflowInternalState.getJobId() != null ? workflowInternalState.getJobId() : NON_RUNNING_JOB_ID;
+    final long jobId = workflowInternalState.getJobId() != null ? workflowInternalState.getJobId() : NON_RUNNING_JOB_ID;
     final Integer attemptNumber = workflowInternalState.getAttemptNumber();
     return new JobInformation(
         jobId,
@@ -730,10 +739,10 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   /**
    * This is running a lambda function that takes {@param input} as an input. If the run of the lambda
    * throws an exception, the workflow will retried after a short delay.
-   *
+   * <p>
    * Note that if the lambda activity is configured to have retries, the exception will only be caught
    * after the activity has been retried the maximum number of times.
-   *
+   * <p>
    * This method is meant to be used for calling temporal activities.
    */
   private <INPUT, OUTPUT> OUTPUT runMandatoryActivityWithOutput(final Function<INPUT, OUTPUT> mapper, final INPUT input) {
@@ -779,13 +788,16 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   }
 
   private ConnectionUpdaterInput connectionUpdaterInputFromState() {
-    return ConnectionUpdaterInput.builder()
-        .connectionId(connectionId)
-        .jobId(workflowInternalState.getJobId())
-        .attemptNumber(workflowInternalState.getAttemptNumber())
-        .fromFailure(false)
-        .build();
-
+    return new ConnectionUpdaterInput(
+        connectionId,
+        workflowInternalState.getJobId(),
+        null,
+        false,
+        workflowInternalState.getAttemptNumber(),
+        null,
+        false,
+        false,
+        false);
   }
 
   /**
@@ -854,7 +866,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
     final JobCreationOutput jobCreationOutput =
         runMandatoryActivityWithOutput(
             jobCreationAndStatusUpdateActivity::createNewJob,
-            new JobCreationInput(connectionUpdaterInput.getConnectionId()));
+            new JobCreationInput(connectionUpdaterInput.getConnectionId(), !workflowState.isSkipScheduling()));
     connectionUpdaterInput.setJobId(jobCreationOutput.getJobId());
 
     return jobCreationOutput.getJobId();
@@ -907,7 +919,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
         attemptNumber,
         jobId);
 
-    final JobInput syncWorkflowInputs = runMandatoryActivityWithOutput(
+    return runMandatoryActivityWithOutput(
         (input) -> {
           try {
             return getSyncInputActivity.getSyncWorkflowInputWithAttemptNumber(input);
@@ -916,8 +928,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
           }
         },
         getSyncInputActivitySyncInput);
-
-    return syncWorkflowInputs;
   }
 
   /**
@@ -936,35 +946,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
         getSyncInputActivitySyncInput);
 
     return checkConnectionInputs;
-  }
-
-  private String getSyncTaskQueue() {
-
-    final RouteToSyncTaskQueueInput RouteToSyncTaskQueueInput = new RouteToSyncTaskQueueInput(connectionId);
-    final int checkWithApiVersion =
-        Workflow.getVersion(SYNC_TASK_QUEUE_ROUTE_RENAME_TAG, Workflow.DEFAULT_VERSION, SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION);
-
-    final RouteToSyncTaskQueueOutput routeToSyncTaskQueueOutput;
-    if (checkWithApiVersion >= SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION) {
-      routeToSyncTaskQueueOutput = runMandatoryActivityWithOutput(
-          routeToSyncTaskQueueActivity::routeToSync,
-          RouteToSyncTaskQueueInput);
-    } else {
-      routeToSyncTaskQueueOutput = runMandatoryActivityWithOutput(
-          routeToSyncTaskQueueActivity::route,
-          RouteToSyncTaskQueueInput);
-    }
-
-    return routeToSyncTaskQueueOutput.getTaskQueue();
-  }
-
-  private String getCheckTaskQueue() {
-    final RouteToSyncTaskQueueInput routeToCheckTaskQueueInput = new RouteToSyncTaskQueueInput(connectionId);
-    final RouteToSyncTaskQueueOutput routeToCheckTaskQueueOutput = runMandatoryActivityWithOutput(
-        routeToSyncTaskQueueActivity::routeToCheckConnection,
-        routeToCheckTaskQueueInput);
-
-    return routeToCheckTaskQueueOutput.getTaskQueue();
   }
 
   /**
@@ -994,7 +975,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
    * make sense.
    */
   private StandardSyncOutput runChildWorkflow(final JobInput jobInputs) {
-    final String taskQueue = getSyncTaskQueue();
+    final String taskQueue = TemporalTaskQueueUtils.getTaskQueue(TemporalJobType.SYNC);
 
     final SyncWorkflow childSync = Workflow.newChildWorkflowStub(SyncWorkflow.class,
         ChildWorkflowOptions.newBuilder()
@@ -1015,19 +996,17 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   private ConnectorJobOutput runCheckInChildWorkflow(final JobRunConfig jobRunConfig,
                                                      final IntegrationLauncherConfig launcherConfig,
                                                      final StandardCheckConnectionInput checkInput) {
-    final String taskQueue = getCheckTaskQueue();
-
-    final CheckConnectionWorkflow childCheck = Workflow.newChildWorkflowStub(CheckConnectionWorkflow.class,
+    final String workflowId = "check_" + workflowInternalState.getJobId() + "_" + checkInput.getActorType().value();
+    final String taskQueue = TemporalTaskQueueUtils.getTaskQueue(TemporalJobType.SYNC);
+    final ConnectorCommandWorkflow childCheck = Workflow.newChildWorkflowStub(
+        ConnectorCommandWorkflow.class,
         ChildWorkflowOptions.newBuilder()
-            .setWorkflowId("check_" + workflowInternalState.getJobId() + "_" + checkInput.getActorType().value())
+            .setWorkflowId(workflowId)
             .setTaskQueue(taskQueue)
             // This will cancel the child workflow when the parent is terminated
             .setParentClosePolicy(ParentClosePolicy.PARENT_CLOSE_POLICY_REQUEST_CANCEL)
             .build());
-
-    return childCheck.run(
-        jobRunConfig, launcherConfig,
-        checkInput);
+    return childCheck.run(new CheckCommandInput(new CheckConnectionInput(jobRunConfig, launcherConfig, checkInput)));
   }
 
   /**
@@ -1168,10 +1147,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
       new MetricAttribute(MetricTags.ACTIVITY_NAME, className),
       new MetricAttribute(MetricTags.ACTIVITY_METHOD, methodName),
     };
-    final var inputCtx = ConnectionUpdaterInput.builder()
-        .connectionId(connectionId)
-        .jobId(workflowInternalState.getJobId())
-        .build();
+    final var inputCtx = new ConnectionUpdaterInput(connectionId, workflowInternalState.getJobId());
 
     logActivityFailure(className, methodName);
     tryRecordCountMetric(
@@ -1194,7 +1170,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
 
   private void initializeWorkflowStateFromInput(final ConnectionUpdaterInput input) {
     // if our previous attempt was a failure, we are still in a run
-    if (input.isFromFailure()) {
+    if (input.getFromFailure()) {
       workflowState.setRunning(true);
     }
     // workflow state is only ever set in test cases. for production cases, it will always be null.
